--- a/projetodepi/src/App.css
+++ b/projetodepi/src/App.css
@@ -40,6 +40,7 @@
   }
 }
 
+/* css do carrinho */
 .cart {
   padding: 20px;
   margin-top: 10px;
@@ -96,4 +97,59 @@
   font-size: 16px;
 }
 
+/* css dos pedidos */
+
+.pedidos {
+  padding: 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.pedidos h2 {
+  text-align: center;
+  font-weight: 300;
+  color: #3D5547;
+  letter-spacing: 6px;
+  margin-bottom: 20px;
+}
+
+.pedidos p {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.pedidos ul {
+  list-style: none;
+  padding: 0;
+}
+
+.pedidos li {
+  border-bottom: 1px solid #ddd;
+  padding: 10px 0;
+}
+
+.pedidos .pedido-item {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 10px;
+}
+
+.pedidos .pedido-item img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.pedidos .pedido-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.pedidos .info {
+  font-size: 12px;
+  color: #555;
+  margin-top: 5px;
+}
 
