--- a/projetodepi/src/components/pages/categoria/ProductDetail.css
+++ b/projetodepi/src/components/pages/categoria/ProductDetail.css
@@ -1,69 +1,84 @@
-  
-  .product-detail {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-  }
-  
-  .product-detail-image img {
-    max-width: 300px;
-    border-radius: 5px;
-    margin-top: 20px;
-  }
-  
-  .product-detail-info {
-    margin-left: 20px;
-  }
-  
-  .product-detail-info h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .product-detail-info p {
-    font-size: 20px;
-    color: #333;
-    margin-bottom: 20px;
-  }
-  
-  .buy-button {
-    padding: 10px 20px;
-    font-size: 14px;
-    color: #fff;
-    background-color: #3D5547;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    align-self: center;
-    
-  }
-  
-  .buy-button:hover {
-    background-color: #88b297;
-  }
+.product-detail {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
 
-  .product-about {
-    width: 80%;
-    max-width: 700px;
-    text-align: left;
-    margin-top: 20px;
-  }
-  
-  .product-about h3 {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  
-  .product-about p {
-    font-size: 16px;
-    color: #555;
-  }
+.product-detail-image img {
+  max-width: 300px;
+  border-radius: 5px;
+  margin-top: 20px;
+}
 
-  .product-comentary {
-    width: 80%;
-    max-width: 700px;
-    text-align: left;
-    margin-top: 20px;
-  }
+.product-detail-info {
+  margin-left: 20px;
+}
+
+.product-detail-info h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.product-detail-info p {
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.button-group {
+  display: flex;
+  gap: 10px;
+  align-self: center;
+}
+
+.buy-button, .favorite-button {
+  padding: 10px 20px;
+  font-size: 14px;
+  color: #fff;
+  background-color: #3D5547;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.buy-button:hover, .favorite-button:hover {
+  background-color: #88b297;
+}
+
+.product-about {
+  width: 80%;
+  max-width: 700px;
+  text-align: left;
+  margin-top: 20px;
+}
+
+.product-about h3 {
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 10px;
+  font-weight: 600;
+}
+
+.product-about p {
+  font-size: 16px;
+  color: #333;
+}
+
+.product-comentary {
+  width: 80%;
+  max-width: 700px;
+  text-align: left;
+  margin-top: 20px;
+}
+
+.product-comentary h3 {
+  color: #333;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.product-comentary p {
+  font-size: 16px;
+}
